--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -1687,9 +1687,12 @@
             $("#AQProLPlan").removeAttr("disabled");
             var stage = $("#InspectionStage").val();
 
-            if ((stage == 'Final' || stage == 'Final Internal' || stage == '3rd Party') && ($("#AQLPlan").val() == '' || $("#AQLPlan").val() == undefined) && ($("#AQProLPlan").val() == '' || $("#AQProLPlan").val() == undefined)) {
+           /* if ((stage == 'Final' || stage == 'Final Internal' || stage == '3rd Party') &&
+                ($("#AQLPlan").val() == '' || $("#AQLPlan").val() == undefined) &&
+                ($("#AQProLPlan").val() == '' || $("#AQProLPlan").val() == undefined)
+            ) {
                 AQLPlanResult = false;
-            }
+            }*/
 
             var CartonResult = true;
             if (stage == 'Final' || stage == 'Final Internal') {
