--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -210,8 +210,8 @@
                     <div class="divSettingCell">@Convert.ToDateTime(Model.FinalInspection.AuditDate).ToString("yyyy/MM/dd")</div>
                     <div class="divSettingCell">Available Qty</div>
                     <div class="divSettingCell">@Model.AvailableQty</div>
-                    <div class="divSettingCell"></div>
-                    <div class="divSettingCell"></div>
+                    <div class="divSettingCell">Line</div>
+                    <div class="divSettingCell">@Model.FinalInspection.SewingLineID</div>
                     <div class="divSettingCell"></div>
                     <div class="divSettingCell"></div>
                     <!--#endregion-->
